add update time

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </ul>
                 <ul class="nav hidden-xs" id="sidebar-footer">
                     <li>
-                      <a href="#"><h3>TVTFiction</h3>Bản sao lưu của Writers' Sanctuary</a>
+                      <a href="#"><h3>TVTFiction</h3>Bản sao lưu của Writers' Sanctuary (cập nhật 19/03/2015)</a>
                     </li>
                 </ul>
             </div>
